Fixed failing test after reader's lock introduction